// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code should passe along code style to LineNumbers 1`] = `
<ThemeProvider
  theme={Object {}}
>
  <WithTheme(Code)
    codeStyle={
      Object {
        "style": Object {
          "color": "blue",
        },
      }
    }
    language="python"
    showLineNumbers={true}
    text="
  const a = 'foo';
  const b = 'bar';
  const c = [a, b].map(item => item + item);
"
  />
</ThemeProvider>
`;

exports[`Code should render a div with a red color 1`] = `
<ThemeProvider
  theme={Object {}}
>
  <WithTheme(Code)
    PreTag="div"
    codeTagProps={
      Object {
        "style": Object {
          "color": "red",
        },
      }
    }
    language="python"
    text="
  const a = 'foo';
  const b = 'bar';
  const c = [a, b].map(item => item + item);
"
  />
</ThemeProvider>
`;
